feat : 가계부 API 카테고리 매핑 추가