@@ -3,6 +3,8 @@ package org.umc.valuedi.domain.ledger.converter;
 import org.springframework.stereotype.Component;
 import org.umc.valuedi.domain.asset.entity.BankTransaction;
 import org.umc.valuedi.domain.asset.entity.CardApproval;
+import org.umc.valuedi.domain.asset.enums.CancelStatus;
+import org.umc.valuedi.domain.ledger.dto.response.CategoryStatResponse;
 import org.umc.valuedi.domain.ledger.dto.response.DailyStatResponse;
 import org.umc.valuedi.domain.ledger.dto.response.LedgerListResponse;
 import org.umc.valuedi.domain.ledger.dto.response.LedgerSummaryResponse;
@@ -12,6 +14,7 @@ import org.umc.valuedi.domain.member.entity.Member;
 
 import java.time.LocalDate;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Component
 public class LedgerConverter {
@@ -19,27 +22,33 @@ public class LedgerConverter {
     // --- Entity -> Response DTO ---
 
     public static LedgerListResponse.LedgerDetail toLedgerDetail(LedgerEntry entry) {
-        String type = "EXPENSE";
+        // LedgerEntry의 transactionType 필드를 직접 사용
+        String type = entry.getTransactionType(); // String 필드를 그대로 사용
         Long amount = 0L;
 
+        // 금액은 여전히 원천 테이블에서 가져옴
         if (entry.getBankTransaction() != null) {
-            // 은행 거래 : 입금이면 INCOME, 출금이면 EXPENSE
-            if (entry.getBankTransaction().getInAmount() > 0) {
-                type = "INCOME";
-                amount = entry.getBankTransaction().getInAmount();
-            } else {
-                amount = entry.getBankTransaction().getOutAmount();
+            BankTransaction bt = entry.getBankTransaction();
+            if ("입금".equals(entry.getTransactionType())) { // transactionType이 "입금"이면 inAmount
+                amount = bt.getInAmount();
+            } else { // "출금"이면 outAmount
+                amount = bt.getOutAmount();
             }
         } else if (entry.getCardApproval() != null) {
-            // 카드거래 : 승인 금액 사용
-            amount = entry.getCardApproval().getUsedAmount();
+            CardApproval ca = entry.getCardApproval();
+            if (ca.getCancelYn() == CancelStatus.NORMAL) { // 정상 승인
+                amount = ca.getUsedAmount();
+            } else if (ca.getCancelYn() == CancelStatus.CANCEL || ca.getCancelYn() == CancelStatus.PARTIAL_CANCEL) { // 취소 또는 부분 취소
+                // 환불의 경우 금액을 음수로 표시하여 지출에서 상계되도록 처리
+                amount = -ca.getUsedAmount();
+            }
         }
 
         return LedgerListResponse.LedgerDetail.builder()
                 .id(entry.getId())
                 .title(entry.getTitle())
                 .amount(amount)
-                .type(type)
+                .type(type) // LedgerEntry의 transactionType 사용
                 .categoryCode(entry.getCategory() != null ? entry.getCategory().getCode() : "ETC")
                 .categoryName(entry.getCategory() != null ? entry.getCategory().getName() : "기타")
                 .transactionAt(entry.getTransactionAt())
@@ -50,7 +59,7 @@ public class LedgerConverter {
     public static LedgerListResponse toLedgerListResponse(List<LedgerEntry> entries, int page, int size, long totalElements) {
         List<LedgerListResponse.LedgerDetail> detailList = entries.stream()
                 .map(LedgerConverter::toLedgerDetail)
-                .toList();
+                .collect(Collectors.toList());
 
         return LedgerListResponse.builder()
                 .content(detailList)
@@ -70,6 +79,16 @@ public class LedgerConverter {
                 .build();
     }
 
+    public static CategoryStatResponse toCategoryStatResponse(String code, String name, Long amount, Long totalExpense) {
+        double percentage = (totalExpense > 0) ? (double) amount / totalExpense * 100 : 0.0;
+        return CategoryStatResponse.builder()
+                .categoryCode(code)
+                .categoryName(name)
+                .totalAmount(amount)
+                .percentage(Math.round(percentage * 10) / 10.0)
+                .build();
+    }
+
     public static DailyStatResponse toDailyStatResponse(LocalDate date, Long income, Long expense) {
         return DailyStatResponse.builder()
                 .date(date)
@@ -84,7 +103,7 @@ public class LedgerConverter {
                 .member(member)
                 .bankTransaction(bankTransaction)
                 .category(category)
-                .title(bankTransaction.getDesc3())
+                .title(bankTransaction.getDesc3()) // 적요를 제목으로
                 .transactionAt(bankTransaction.getTrDatetime())
                 .isUserModified(false)
                 .build();
